1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (libobjc.dll): Use $(DLLWRAP), not dllwrap.
	(lib_LTLIBRARIES): Set to @LIBOBJC_LA@.
	(EXTRA_LTLIBRARIES): Set to libobjc.la.
	(bin_PROGS): Set to @OBJC_DLL@.
	(EXTRA_PROGS): Set to objc.dll.
	(install-data-local): New rule for libobjc.a (if USEDLL is set).

	* configure.in: Set LIBOBJC_LA or OBJC_DLL depending on if USEDLL
	is set (from md_CHECK_DLL). Substitute LIBOBJC_LA and OBJC_DLL.
	(AC_OUTPUT): Extract objc/externvar.h.

	* Makefile.am (CPPFLAGS): Quote $(EXPORT_EXTERN).  It can't
	be quoted in acdll.m4 because it is extracted into externvar.h.

1999-05-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* misc.c (_objc_malloc, _objc_atomic_malloc, _objc_valloc,
	_objc_realloc, _objc_callc, _objc_free): Add externobjcvardef.

	* class.c: (_objc_lookup_class): Add externobjcvardef.

	* init.c (_objc_load_callback): Add externobjcvardef.

	* configure.in: Use md_CHECK_DLL.

	* Makefile.am (CPPFLAGS): Add -Dexternobjcvar=$(EXPORT_EXTERN).

1999-05-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (libobjc.dll): New rule.
	(EXTRA_DIST): New files dllinit.c and genctors.

1999-05-22  Marcus Daniels  <mgd@pajarito.libarts.wsu.edu>

	* ltconfig: Add support for hpux9; generate and compile function
	to call all constructors.

1999-05-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* mframe.m: Include sys/sigevent.h if __hpux__ and
	HAVE_SYS_SIGEVENT_H.

	* configure.in: Check for sys/sigevent.h.

1999-05-16  Marcus G. Daniels  <swamsfi@lark.cc.ukans.edu>

	* archive.c, objects.c, selector.c: Include string.h.

1999-05-15  Marcus G. Daniels  <swamsfi@lark.cc.ukans.edu>

	* config/alpha/mframe-generic.h (MFRAME_STACK_STRUCT): Add.
	Add casts from pointer diff to ints for printf args.

1999-05-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (libobjc_la_LIBADD): Add -lgcc.
	(libobjc_la_LDFLAGS): Add -L to libgcc location.  This is to